--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,10 @@
   ],
   "background_page": "background.html",
   "icons": {
-    "16": "edit-delete16.png",
-    "32": "edit-delete32.png",
-    "48": "edit-delete32.png"
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "content_scripts": [
     {
